@@ -10,10 +10,10 @@ package org.sosy_lab.cpachecker.cpa.value;
 
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Preconditions.checkNotNull;
+import static com.google.common.base.Verify.verify;
 
 import com.google.common.base.Function;
 import com.google.common.collect.Iterables;
-import com.google.common.collect.Lists;
 import com.google.common.primitives.UnsignedLongs;
 import java.io.Serial;
 import java.math.BigInteger;
@@ -599,34 +599,33 @@ public abstract class AbstractExpressionValueVisitor
     }
 
     try {
-      switch (type.getType()) {
+      return switch (type.getType()) {
         case INT -> {
           // Both l and r must be of the same type, which in this case is INT, so we can cast to
           // long.
           long lVal = lNum.getNumber().longValue();
           long rVal = rNum.getNumber().longValue();
           long result = arithmeticOperation(lVal, rVal, op, calculationType, machineModel, logger);
-          return new NumericValue(result);
+          yield new NumericValue(result);
         }
         case INT128 -> {
           BigInteger lVal = lNum.bigIntegerValue();
           BigInteger rVal = rNum.bigIntegerValue();
           BigInteger result = arithmeticOperation(lVal, rVal, op, logger);
-          return new NumericValue(result);
+          yield new NumericValue(result);
         }
-        case FLOAT, DOUBLE, FLOAT128 -> {
-          return new NumericValue(
-              arithmeticOperation(
-                  op,
-                  castToFloat(machineModel, type, lNum),
-                  castToFloat(machineModel, type, rNum)));
-        }
+        case FLOAT, DOUBLE, FLOAT128 ->
+            new NumericValue(
+                arithmeticOperation(
+                    op,
+                    castToFloat(machineModel, type, lNum),
+                    castToFloat(machineModel, type, rNum)));
         default -> {
           logger.logf(
               Level.FINE, "unsupported type for result of binary operation %s", type.toString());
-          return Value.UnknownValue.getInstance();
+          yield Value.UnknownValue.getInstance();
         }
-      }
+      };
     } catch (ArithmeticException e) { // log warning and ignore expression
       logger.logf(
           Level.WARNING,
@@ -762,7 +761,7 @@ public abstract class AbstractExpressionValueVisitor
   private Value handleBuiltinFunction2(
       String pName, List<Value> pArguments, BiFunction<FloatValue, FloatValue, Value> pOperation) {
     checkArgument(pArguments.size() == 2);
-    Value parameter1 = pArguments.get(0);
+    Value parameter1 = pArguments.getFirst();
     Value parameter2 = pArguments.get(1);
 
     if (parameter1.isExplicitlyKnown() && parameter2.isExplicitlyKnown()) {
@@ -802,7 +801,11 @@ public abstract class AbstractExpressionValueVisitor
           parameterValues.add(newValue);
         }
 
-        if (BuiltinOverflowFunctions.isBuiltinOverflowFunction(calledFunctionName)) {
+        if (BuiltinFunctions.isPopcountFunction(functionName)) {
+          return handlePopcount(
+              functionName, parameterValues, pIastFunctionCallExpression, machineModel, logger);
+
+        } else if (BuiltinOverflowFunctions.isBuiltinOverflowFunction(calledFunctionName)) {
           return BuiltinOverflowFunctions.evaluateFunctionCall(
               pIastFunctionCallExpression, this, machineModel, logger);
 
@@ -980,7 +983,7 @@ public abstract class AbstractExpressionValueVisitor
           // We only need the return value and can ignore the integer part that needs to be written
           // to the pointer in the 2nd argument
           if (parameterValues.size() == 2) {
-            Value value = parameterValues.get(0);
+            Value value = parameterValues.getFirst();
             if (value.isExplicitlyKnown()) {
               FloatValue arg =
                   castToFloat(
@@ -1531,29 +1534,28 @@ public abstract class AbstractExpressionValueVisitor
       rVal = pRightValue.doubleValue();
     }
 
-    switch (pBinaryOperator) {
-      case PLUS, MINUS, DIVIDE, MULTIPLY, MODULO -> {
-        return switch (pBinaryOperator) {
-          case PLUS -> new NumericValue(lVal + rVal);
+    return switch (pBinaryOperator) {
+      case PLUS, MINUS, DIVIDE, MULTIPLY, MODULO ->
+          switch (pBinaryOperator) {
+            case PLUS -> new NumericValue(lVal + rVal);
 
-          case MINUS -> new NumericValue(lVal - rVal);
+            case MINUS -> new NumericValue(lVal - rVal);
 
-          case DIVIDE -> {
-            if (rVal == 0) {
-              throw new IllegalOperationException("Division by zero: " + lVal + " / " + rVal);
+            case DIVIDE -> {
+              if (rVal == 0) {
+                throw new IllegalOperationException("Division by zero: " + lVal + " / " + rVal);
+              }
+              yield new NumericValue(lVal / rVal);
             }
-            yield new NumericValue(lVal / rVal);
-          }
 
-          case MULTIPLY -> new NumericValue(lVal * rVal);
+            case MULTIPLY -> new NumericValue(lVal * rVal);
 
-          case MODULO -> new NumericValue(lVal % rVal);
+            case MODULO -> new NumericValue(lVal % rVal);
 
-          default ->
-              throw new AssertionError(
-                  "Unsupported binary operation " + pBinaryOperator + " on double values");
-        };
-      }
+            default ->
+                throw new AssertionError(
+                    "Unsupported binary operation " + pBinaryOperator + " on double values");
+          };
       case EQUALS, NOT_EQUALS, GREATER_THAN, GREATER_EQUAL, LESS_THAN, LESS_EQUAL -> {
         final boolean result =
             switch (pBinaryOperator) {
@@ -1570,13 +1572,10 @@ public abstract class AbstractExpressionValueVisitor
                           + " on floating point values");
             };
         // return 1 if expression holds, 0 otherwise
-        return BooleanValue.valueOf(result);
+        yield BooleanValue.valueOf(result);
       }
-      default -> {
-        // TODO check which cases can be handled
-        return UnknownValue.getInstance();
-      }
-    }
+      default -> /* TODO check which cases can be handled */ UnknownValue.getInstance();
+    };
   }
 
   private Value calculateBooleanOperation(
@@ -1799,7 +1798,7 @@ public abstract class AbstractExpressionValueVisitor
     long concreteArraySize;
     final JType elementType = pJArrayCreationExpression.getExpressionType().getElementType();
 
-    for (JExpression sizeExpression : Lists.reverse(pJArrayCreationExpression.getLength())) {
+    for (JExpression sizeExpression : pJArrayCreationExpression.getLength().reverse()) {
       currentDimension++;
       lastArrayValue = currentArrayValue;
       Value sizeValue = sizeExpression.accept(this);
@@ -2224,31 +2223,19 @@ public abstract class AbstractExpressionValueVisitor
   }
 
   private static Value createValue(long value, JSimpleType targetType) {
-    switch (targetType) {
-      case BYTE -> {
-        return new NumericValue((byte) value);
-      }
+    return switch (targetType) {
+      case BYTE -> new NumericValue((byte) value);
       case CHAR -> {
         char castedValue = (char) value;
-        return new NumericValue((int) castedValue);
+        yield new NumericValue((int) castedValue);
       }
-      case SHORT -> {
-        return new NumericValue((short) value);
-      }
-      case INT -> {
-        return new NumericValue((int) value);
-      }
-      case LONG -> {
-        return new NumericValue(value);
-      }
-      case FLOAT -> {
-        return new NumericValue((float) value);
-      }
-      case DOUBLE -> {
-        return new NumericValue((double) value);
-      }
+      case SHORT -> new NumericValue((short) value);
+      case INT -> new NumericValue((int) value);
+      case LONG -> new NumericValue(value);
+      case FLOAT -> new NumericValue((float) value);
+      case DOUBLE -> new NumericValue((double) value);
       default -> throw new AssertionError("Trying to cast to unsupported type " + targetType);
-    }
+    };
   }
 
   private static Value createValue(double value, JSimpleType targetType) {
@@ -2281,6 +2268,83 @@ public abstract class AbstractExpressionValueVisitor
     } else {
       return null;
     }
+  }
+
+  /**
+   * Handle calls to __builtin_popcount, __builtin_popcountl, and __builtin_popcountll. Popcount
+   * sums up all 1-bits in an unsigned int, unsigned long int or unsigned long long int number
+   * given. Test C programs available at test/programs/simple/builtin_popcount*.c
+   */
+  private static Value handlePopcount(
+      String pFunctionName,
+      List<Value> pParameters,
+      CFunctionCallExpression e,
+      MachineModel pMachineModel,
+      LogManagerWithoutDuplicates logger)
+      throws UnrecognizedCodeException {
+    if (pParameters.size() == 1) {
+      CSimpleType argumentType =
+          BuiltinFunctions.getParameterTypeOfBuiltinPopcountFunction(pFunctionName);
+      assert argumentType.hasUnsignedSpecifier();
+
+      // Cast to unsigned target type
+      Value paramValue = castCValue(pParameters.getFirst(), argumentType, pMachineModel, logger);
+
+      if (paramValue.isNumericValue()) {
+        BigInteger numericParam = paramValue.asNumericValue().bigIntegerValue();
+
+        // Check that the cast function parameter is really unsigned, as defined by the function and
+        // needed by Java BigInteger.bitcount() to be correct, as negative values give distinct
+        // results
+        verify(
+            numericParam.signum() >= 0,
+            "Evaluated parameter for C function %s is negative, but the function defines unsigned"
+                + " parameters only",
+            pFunctionName);
+
+        return new NumericValue(numericParam.bitCount());
+
+      } else if (paramValue instanceof SymbolicExpression symbolicParam) {
+        // Value Analysis without SymEx never ends up here!
+
+        int parameterBitSize = pMachineModel.getSizeofInBits(argumentType);
+
+        final SymbolicValueFactory factory = SymbolicValueFactory.getInstance();
+        SymbolicExpression one = factory.asConstant(new NumericValue(1), CNumericTypes.INT);
+        SymbolicExpression constraint =
+            factory.binaryAnd(symbolicParam, one, CNumericTypes.INT, argumentType);
+
+        // Add up the bits one by one
+        // sum of ((castParamValue >> i) & 1)
+        for (int i = 1; i < parameterBitSize; i++) {
+          SymbolicExpression countOfBitAtIndex =
+              factory.binaryAnd(
+                  factory.shiftRightUnsigned(
+                      symbolicParam,
+                      factory.asConstant(new NumericValue(i), CNumericTypes.INT),
+                      argumentType,
+                      argumentType),
+                  one,
+                  CNumericTypes.INT,
+                  argumentType);
+          constraint =
+              factory.add(constraint, countOfBitAtIndex, CNumericTypes.INT, CNumericTypes.INT);
+        }
+        return constraint;
+      }
+
+      return Value.UnknownValue.getInstance();
+    }
+
+    throw new UnrecognizedCodeException(
+        "Function "
+            + pFunctionName
+            + " received "
+            + pParameters.size()
+            + " parameters"
+            + " instead of the expected "
+            + 1,
+        e);
   }
 
   /**
