@@ -49,7 +49,6 @@ import org.sosy_lab.cpachecker.cfa.model.c.CFunctionSummaryStatementEdge;
 import org.sosy_lab.cpachecker.cfa.types.c.CArrayType;
 import org.sosy_lab.cpachecker.cfa.types.c.CProblemType;
 import org.sosy_lab.cpachecker.exceptions.CPAException;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.Pair;
 import org.sosy_lab.cpachecker.util.cwriter.Statement.CompoundStatement;
 import org.sosy_lab.cpachecker.util.cwriter.Statement.EmptyStatement;
@@ -182,7 +181,7 @@ public class CFAToCTranslator {
       final CompoundStatement pCurrentBlock,
       final Collection<NodeAndBlock> pEnteringBlocks) {
 
-    if (CFAUtils.enteringEdges(pCurrentNode).size() <= 1
+    if (pCurrentNode.getNumEnteringEdges() <= 1
         || pEnteringBlocks == null
         || pEnteringBlocks.size() <= 1) {
       return pCurrentBlock;
@@ -236,7 +235,7 @@ public class CFAToCTranslator {
   }
 
   private Statement createGoto(CFANode pCurrentNode, CFANode pTarget) {
-    String go = "goto " + createdStatements.get(pTarget).get(0).getLabel() + ";";
+    String go = "goto " + createdStatements.get(pTarget).getFirst().getLabel() + ";";
     return createSimpleStatement(pCurrentNode, go);
   }
 
@@ -303,13 +302,15 @@ public class CFAToCTranslator {
   }
 
   private FluentIterable<CFAEdge> getRelevantLeavingEdges(CFANode pNode) {
-    return CFAUtils.leavingEdges(pNode)
+    return pNode
+        .getLeavingEdges()
         .filter(e -> !(e instanceof FunctionReturnEdge))
         .filter(e -> !(e instanceof CFunctionSummaryStatementEdge));
   }
 
   private FluentIterable<CFAEdge> getRelevantEnteringEdges(CFANode pNode) {
-    return CFAUtils.enteringEdges(pNode)
+    return pNode
+        .getEnteringEdges()
         .filter(e -> !(e instanceof FunctionReturnEdge))
         .filter(e -> !(e instanceof CFunctionSummaryStatementEdge));
   }
@@ -339,7 +340,7 @@ public class CFAToCTranslator {
       ImmutableList.Builder<Pair<CFAEdge, CompoundStatement>> branches = ImmutableList.builder();
 
       List<CFAEdge> ifAndElseEdge = new ArrayList<>(outgoingEdges);
-      if (!getRealTruthAssumption((CAssumeEdge) ifAndElseEdge.get(0))) {
+      if (!getRealTruthAssumption((CAssumeEdge) ifAndElseEdge.getFirst())) {
         // swap elements so that if-branch comes before else-branch in list
         ifAndElseEdge = swapElements(ifAndElseEdge);
       }
@@ -351,7 +352,7 @@ public class CFAToCTranslator {
         String cond;
         if (truthAssumption) {
           // must be if-branch, first in list
-          assert ifAndElseEdge.get(0) == currentEdge;
+          assert ifAndElseEdge.getFirst() == currentEdge;
           if (assumeEdge.getTruthAssumption()) {
             cond =
                 "if ("
@@ -384,7 +385,7 @@ public class CFAToCTranslator {
 
     List<CFAEdge> swapped = new ArrayList<>(2);
     swapped.add(pListWithTwoElements.get(1));
-    swapped.add(pListWithTwoElements.get(0));
+    swapped.add(pListWithTwoElements.getFirst());
     return swapped;
   }
 
@@ -498,7 +499,7 @@ public class CFAToCTranslator {
           }
 
           if (declaration.contains(",")) {
-            for (CFAEdge predEdge : CFAUtils.enteringEdges(pCFAEdge.getPredecessor())) {
+            for (CFAEdge predEdge : pCFAEdge.getPredecessor().getEnteringEdges()) {
               if (predEdge
                   .getRawStatement()
                   .equals(lDeclarationEdge.getDeclaration().toASTString())) {
